--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios-observable": "^1.1.3",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "handsontable": "^7.4.2",
     "jexcel": "^3.9.1",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
