--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "@storybook/addon-a11y": "^5.3.18",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-docs": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-notes": "^5.3.18",
+    "@storybook/addon-storysource": "^5.3.18",
+    "@storybook/addon-viewport": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/preset-scss": "^1.0.2",
+    "@storybook/preset-typescript": "^3.0.0",
+    "@storybook/svelte": "^5.3.18",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.0",
@@ -13,26 +27,32 @@
     "node-sass": "^4.13.1",
     "node-sass-magic-importer": "^5.3.2",
     "prettier": "^1.19.1",
+    "react": "^16.13.1",
+    "react-docgen-typescript-loader": "^3.7.2",
     "sass-loader": "^8.0.2",
     "serve": "11",
     "style-loader": "^1.1.3",
     "svelte": "~3.20.1",
+    "svelte-loader": "^2.13.6",
     "svelte-loader-hot": "^0.3.0",
     "svelte-preprocess": "^3.5.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack-dev-server --open",
     "start": "sirv public --single",
     "format": "npx prettier --write 'src/**/*.{js,ts,svelte,css,scss}'",
-    "eslint": "npx eslint  src/**/*.*"
+    "eslint": "npx eslint  src/**/*.*",
+    "storybook": "start-storybook -p 4061 -s public"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
