--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jquery-ui": "^1.12.1",
     "json-bigint": "^0.3.0",
     "jsuites": "^2.7.1",
+    "mobile-detect": "^1.4.4",
     "page": "^1.11.5",
     "prettier-plugin-svelte": "^0.7.0",
     "rxjs": "^6.5.4",
